# Notebook-To-Pdf

./: .gitignore  README.md  api_keys.json  main.py  pyproject.toml  tavily_api_keys.json
samples/: 50_startups_mlr_notebook.ipynb  x.ipynb
src/: analyzer.py  formatter.py  llm_manager.py  parser.py  pdf_gen.py
