[project]
name = "notebook-converter"
version = "0.1.0"
description = "AI-Powered Jupyter to PDF formatting tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "markdown>=3.10.2",
    "nbformat>=5.10.4",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
    "weasyprint>=68.1",
    "langchain-core",
    "langchain-groq",
]
